k8s-ingress-controller/ingress/ingress-controller.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ingress-controller
  namespace: mzo-ingress-space
spec:
  replicas: 1
  selector:
    matchLabels:
      name: nginx-ingress
  template:
    metadata:
      labels:
        name: nginx-ingress
    spec:
      serviceAccountName: ingress-serviceaccount
      containers:
        - name: nginx-ingress-controller
          image: quay.io/kubernetes-ingress-controller/nginx-ingress-controller:0.21.0
          args:
            - /nginx-ingress-controller
            - --configmap=$(POD_NAMESPACE)/nginx-configuration
            - --tcp-services-configmap=$(POD_NAMESPACE)/tcp-services
            - --default-backend-service=mzo-app-space/default-http-backend
            - --v=5
          ports:
            - name: http
              containerPort: 80
            - name: https
              containerPort: 443
            - name: echo
              containerPort: 500
            - name: dns-tcp
              containerPort: 53
              protocol: TCP
            - name: redic-tcp
              containerPort: 6379
              protocol: TCP
#            - name: dns-udp
#              containerPort: 53
#              protocol: UDP
