k8s-ingress-controller/ingress/ingress-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ingress
  namespace: mzo-ingress-space
  annotations:
    service.beta.kubernetes.io/azure-load-balancer-internal: "true"
spec:
  type: LoadBalancer
  ports:
    - port: 80
      name: "default"
      targetPort: 80
    - port: 443
      name: "https"
      targetPort: 443
    - port: 8080
      name: "http"
      targetPort: 8080
      protocol: TCP
    - port: 500
      protocol: TCP
      name: "proxied-tcp-500"
      targetPort: 500
    - port: 6379
      protocol: TCP
      name: "proxied-tcp-6379"
      targetPort: 6379
    - name: "proxied-tcp-53"
      port: 53
      targetPort: 53
      protocol: TCP
  selector:
    name: nginx-ingress
